# mirapolis-import

./: .gitignore  Cargo.toml  README.md  payload.csv
.cargo/: config.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/modules/: args.rs  config.rs  error.rs  fetch.rs  files.rs  mod.rs  person.rs
